Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-804

the transport doesn't always shutdown its output properly

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • proton-0.9
    • None
    • None

    Description

      I believe the issue is related to the autodetect code andrew added not too long ago. I've attached a patch that has a test case with a relatively minimal reproducer.

      Attachments

        1. 0001-This-may-be-a-fix-for-PROTON-804-on-error-in-server-.patch
          4 kB
          Andrew Stitcher
        2. transport-test.patch
          1 kB
          Rafael H. Schloming

        Activity

          People

            astitcher Andrew Stitcher
            rhs Rafael H. Schloming
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: