PROTON-804: On an error in protocol autodetection switch to a special layer that just returns end of stream for both input and output.